Add download ZIP and fix download link

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             <span class="browser-badge">Firefox</span>
                         </div>
                     </div>
-                    <a href="../carbon-tracker-v1.1.0-beta.zip" class="btn btn-download" download>
+                    <a href="carbon-tracker-v1.1.0-beta.zip" class="btn btn-download" download>
                         <span class="download-icon">⬇️</span>
                         Download Extension (Beta)
                     </a>
@@ -276,7 +276,7 @@
                     <h4>Contact</h4>
                     <p>Have questions or feedback?</p>
                     <!-- Add your contact info here -->
-                    <p class="contact-placeholder">[Your Email or GitHub]</p>
+                    <p class="contact-placeholder">jivanburney@gmail.com</p>
                 </div>
             </div>
             <div class="footer-bottom">
